<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/loginInfo"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/editLogin"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape"
        android:hint="@string/login_label"
        android:padding="10dp"
        android:textColor="@color/editText_color"
        android:textColorHint="@color/editText_color" />
    <Button
        android:id="@+id/confirmEditedLogin"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/buttonColor"
        android:text="@string/editLogin"
        android:textColor="@color/buttonTextColor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/emailInfo"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape"
        android:hint="@string/register_email"
        android:padding="10dp"
        android:textColor="@color/editText_color"
        android:textColorHint="@color/editText_color" />
    <EditText
        android:id="@+id/editEmailRepeat"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape"
        android:hint="@string/emailRepeat"
        android:padding="10dp"
        android:textColor="@color/editText_color"
        android:textColorHint="@color/editText_color" />
    <Button
        android:id="@+id/confirmEditedEmail"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/buttonColor"
        android:text="@string/emailEdit"
        android:textColor="@color/buttonTextColor" />

    <Button
        android:id="@+id/backtoProfile"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/buttonColor"
        android:text="@string/deleteBack"
        android:textColor="@color/buttonTextColor" />


</LinearLayout>