<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/password"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/editText_color"
        android:textColorHint="@color/editText_color" />

    <EditText
        android:id="@+id/passwordRepeat"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/editText_color"
        android:textColorHint="@color/editText_color" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/buttonColor"
        android:text="@string/changePasswordButton"
        android:textColor="@color/buttonTextColor" />
</LinearLayout>