<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="126dp">

        <ImageView
            android:id="@+id/loadedImage"
            android:layout_width="112dp"
            android:layout_height="101dp"
            android:layout_gravity="center"
            android:layout_marginStart="143dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toStartOf="@+id/loadButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/loadButton"
            android:layout_width="120dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:background="@color/buttonColor"
            android:text="@string/loadImage"
            android:textColor="@color/buttonTextColor"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="62dp"
            android:layout_height="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="2dp"
            android:text="@string/or"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/takePictureButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loadedImage"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/takePictureButton"
            android:layout_width="120dp"
            android:layout_height="37dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="9dp"
            android:layout_weight="0"
            android:background="@color/buttonColor"
            android:text="@string/takePicture"
            android:textColor="@color/buttonTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/postTitle"
            android:layout_width="243dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape"
            android:hint="@string/titlePost"
            android:padding="10dp"
            android:textColor="@color/editText_color"
            android:textColorHint="@color/editText_color" />

    </LinearLayout>

    <EditText
        android:id="@+id/postContent"
        android:layout_width="385dp"
        android:layout_height="329dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape"
        android:gravity="top|left"
        android:hint="@string/content"
        android:padding="10dp"
        android:textColor="@color/editText_color"
        android:textColorHint="@color/editText_color" />

    <Button
        android:id="@+id/addPostButton"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/buttonColor"
        android:text="@string/addPost"
        android:textColor="@color/buttonTextColor" />

</LinearLayout>